syntax = "proto3";

import "bigint.proto";
import "marketplace.proto";
import "insonmnia.proto";

package sonm;

enum ComparisonOperator {
    EQ = 0;
    GTE = 1;
    LTE = 2;
}


service DWH {
    rpc GetOrdersList(OrdersListRequest) returns (OrdersListReply) {}
    rpc GetOrderDetails(ID) returns (MarketOrder) {}
    rpc GetDealsList(DealsListRequest) returns (DealsListReply) {}
    rpc GetDealDetails(ID) returns (MarketDeal) {}
    rpc GetDealChangeRequests(ID) returns (DealChangeRequestsReply) {}
}

message OrdersListRequest {
    MarketOrderType type = 1;
    MarketOrderStatus status = 2;
    string authorID = 3;
    string counterpartyID = 4;
    uint64 durationSeconds = 5;
    ComparisonOperator durationOperator = 6;
    uint64 price = 8;
    ComparisonOperator priceOperator = 9;
    uint64 limit = 10;
    uint64 offset = 11;
}

message OrdersListReply {
    repeated MarketOrder orders = 1;
}

message DealsListRequest {
    string supplierID = 1;
    string consumerID = 2;
    string masterID = 3;
    string askID = 4;
    string bidID = 5;
    uint64 durationSeconds = 6;
    ComparisonOperator durationOperator = 7;
    uint64 price = 8;
    ComparisonOperator priceOperator = 9;
    MarketDealStatus status = 12;
    uint64 limit = 13;
    uint64 offset = 14;
}

message DealsListReply {
    repeated MarketDeal deals = 1;
}

message DealChangeRequestsReply {
    repeated DealChangeRequest changeRequests = 1;
}

message DealChangeRequest {
    uint64 durationSeconds = 1;
    BigInt price = 2;
}